force-app/main/default/objects/Interior_Designer__c/Interior_Designer__c.object-meta.xml
<CustomObject>
    <label>Interior Designer</label>
    <nameField>
        <label>Design Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interior Designers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>