force-app/main/default/objects/Interior_Designer__c/fields/Active_in_Showroom__c.field-meta.xml
<CustomField>
    <fullName>Active_in_Showroom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active in Showroom</label>
    <type>Checkbox</type>
</CustomField>