force-app/main/default/objects/Interior_Designer__c/fields/Active_on_Roster__c.field-meta.xml
<CustomField>
    <fullName>Active_on_Roster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active on Roster</label>
    <type>Checkbox</type>
</CustomField>