force-app/main/default/objects/Interior_Designer__c/fields/Available_at_Showroom__c.field-meta.xml
<CustomField>
    <fullName>Available_at_Showroom__c</fullName>
    <label>Available at Showroom</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kanakapura Showroom</fullName>
            </value>
            <value>
                <fullName>Gopalan Showroom</fullName>
            </value>
            <value>
                <fullName>Pushparang Showroom</fullName>
            </value>
            <value>
                <fullName>Durga Petals Showroom</fullName>
            </value>
            <value>
                <fullName>Test Showroom 2</fullName>
            </value>
            <value>
                <fullName>Sanghvi Valley</fullName>
            </value>
            <value>
                <fullName>Noida Showroom</fullName>
            </value>
            <value>
                <fullName>Gurgaon Showroom</fullName>
            </value>
            <value>
                <fullName>Kodambakkam Showroom</fullName>
            </value>
            <value>
                <fullName>Gachibowli Showroom</fullName>
            </value>
            <value>
                <fullName>Kandivali Showroom</fullName>
            </value>
            <value>
                <fullName>Yelahanka Showroom</fullName>
            </value>
            <value>
                <fullName>HSR Showroom</fullName>
            </value>
            <value>
                <fullName>Thane Showroom</fullName>
            </value>
            <value>
                <fullName>Test Showroom</fullName>
            </value>
            <value>
                <fullName>Gulbarga</fullName>
            </value>
            <value>
                <fullName>Hebbal Showroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>