force-app/main/default/objects/Interior_Designer__c/fields/Average_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Average_Meetings__c</fullName>
    <formula>IF(Total_Months__c &gt; 0, N_8_to_N_2_Total_Opportunities__c / Total_Months__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Meetings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>