force-app/main/default/objects/Interior_Designer__c/fields/Batch_Job_Execute_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Execute_Time__c</fullName>
    <label>Batch Job Execute Time</label>
    <type>DateTime</type>
</CustomField>