force-app/main/default/objects/Interior_Designer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Gurgaon</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>