force-app/main/default/objects/Interior_Designer__c/fields/Contract_Sent_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Status__c</fullName>
    <label>Contract Sent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Sent with reminder 1</fullName>
            </value>
            <value>
                <fullName>Sent with reminder 2</fullName>
            </value>
            <value>
                <fullName>Sent with reminder 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>