force-app/main/default/objects/Interior_Designer__c/fields/Conversion__c.field-meta.xml
<CustomField>
    <fullName>Conversion__c</fullName>
    <formula>IF(Total_Opportunities__c &gt; 0, Total_Wins__c / Total_Opportunities__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>