force-app/main/default/objects/Interior_Designer__c/fields/Date_of_Resignation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Resignation__c</fullName>
    <label>Date of Resignation</label>
    <type>Date</type>
</CustomField>