force-app/main/default/objects/Interior_Designer__c/fields/Does_not_Contain_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Does_not_Contain_Inactive__c</fullName>
    <formula>IF(OR(ISPICKVAL(DP_Status__c, &apos;Active - Available to take meetings&apos;),ISPICKVAL(DP_Status__c, &apos;Active - Under showroom assessment&apos;),ISPICKVAL(DP_Status__c, &apos;Active - Overloaded 10-40&apos;),ISPICKVAL(DP_Status__c, &apos;Active - Overloaded 0-10&apos;),ISPICKVAL(DP_Status__c, &apos;Active - Overloaded available to meetings&apos;),ISBLANK(TEXT( DP_Status__c ))), true, false)</formula>
    <label>Does not Contain Inactive</label>
    <type>Checkbox</type>
</CustomField>