force-app/main/default/objects/Interior_Designer__c/fields/DP_Consent_for_Tabs__c.field-meta.xml
<CustomField>
    <fullName>DP_Consent_for_Tabs__c</fullName>
    <label>DP Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreed</fullName>
            </value>
            <value>
                <fullName>Not agreed</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>