force-app/main/default/objects/Interior_Designer__c/fields/DP_Position__c.field-meta.xml
<CustomField>
    <fullName>DP_Position__c</fullName>
    <label>DP Position #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>