force-app/main/default/objects/Interior_Designer__c/fields/DP_Quote_TAT__c.field-meta.xml
<CustomField>
    <fullName>DP_Quote_TAT__c</fullName>
    <label>DP Quote TAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>