force-app/main/default/objects/Interior_Designer__c/fields/DP_Status__c.field-meta.xml
<CustomField>
    <fullName>DP_Status__c</fullName>
    <label>DP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - Available to take meetings</fullName>
            </value>
            <value>
                <fullName>Inactive - Available to take meetings</fullName>
            </value>
            <value>
                <fullName>Active - Overloaded available to meetings</fullName>
            </value>
            <value>
                <fullName>Active - Under showroom assessment</fullName>
                <default>true</default>
                <label>Active - Under showroom assessment</label>
            </value>
            <value>
                <fullName>Active - Overloaded 10-40</fullName>
            </value>
            <value>
                <fullName>Active - Overloaded 0-10</fullName>
            </value>
            <value>
                <fullName>Inactive - No Response</fullName>
            </value>
            <value>
                <fullName>Inactive - On short leave</fullName>
            </value>
            <value>
                <fullName>Inactive - On long leave</fullName>
            </value>
            <value>
                <fullName>Inactive - PIP</fullName>
            </value>
            <value>
                <fullName>Inactive - Terminated</fullName>
            </value>
            <value>
                <fullName>Inactive - Quit HL</fullName>
            </value>
            <value>
                <fullName>Inactive- Busy with 10-40</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Under showroom assessment</fullName>
            </value>
            <value>
                <fullName>Quit HL</fullName>
            </value>
            <value>
                <fullName>Overloaded 0-10</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Overloaded 10-40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>