force-app/main/default/objects/Interior_Designer__c/fields/DP_Team_Status__c.field-meta.xml
<CustomField>
    <fullName>DP_Team_Status__c</fullName>
    <label>DP Team Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>