force-app/main/default/objects/Interior_Designer__c/fields/First_Opp_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Opp_Meeting_Date__c</fullName>
    <label>First Opp. Meeting Date</label>
    <type>DateTime</type>
</CustomField>