force-app/main/default/objects/Interior_Designer__c/fields/Internal_Buddy__c.field-meta.xml
<CustomField>
    <fullName>Internal_Buddy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Buddy</label>
    <referenceTo>Interior_Designer__c</referenceTo>
    <relationshipLabel>Interior Designers</relationshipLabel>
    <relationshipName>Interior_Designers</relationshipName>
    <type>Lookup</type>
</CustomField>