force-app/main/default/objects/Interior_Designer__c/fields/Languages_Known__c.field-meta.xml
<CustomField>
    <fullName>Languages_Known__c</fullName>
    <label>Languages Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Malayalam</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>