force-app/main/default/objects/Interior_Designer__c/fields/Last_Opportunity_Met_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Met_On__c</fullName>
    <label>Last Opportunity Met On</label>
    <type>DateTime</type>
</CustomField>