force-app/main/default/objects/Interior_Designer__c/fields/Leave_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_End_Date__c</fullName>
    <label>Leave End Date</label>
    <type>Date</type>
</CustomField>