force-app/main/default/objects/Interior_Designer__c/fields/N_10_to_N_4_Total_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>N_10_to_N_4_Total_Won_Opportunities__c</fullName>
    <label>N-10 to N-4 Total Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>