force-app/main/default/objects/Interior_Designer__c/fields/N_1_Average_Meetings__c.field-meta.xml
<CustomField>
    <fullName>N_1_Average_Meetings__c</fullName>
    <formula>IF(N_1_Total_Months__c &gt; 0, N_9_to_N_3_Total_Opportunities__c / N_1_Total_Months__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N-1 Average Meetings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>