force-app/main/default/objects/Interior_Designer__c/fields/N_2_Total_Months__c.field-meta.xml
<CustomField>
    <fullName>N_2_Total_Months__c</fullName>
    <label>N-2 Total Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>