force-app/main/default/objects/Interior_Designer__c/fields/New_Joinee_0_4__c.field-meta.xml
<CustomField>
    <fullName>New_Joinee_0_4__c</fullName>
    <formula>IF( X0_4_Opportunities__c &lt;= 5, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Joinee 0 - 4</label>
    <type>Checkbox</type>
</CustomField>