force-app/main/default/objects/Interior_Designer__c/fields/New_Joinee_8__c.field-meta.xml
<CustomField>
    <fullName>New_Joinee_8__c</fullName>
    <formula>IF( X8_Opportunities__c &lt;=5 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Joinee 8+</label>
    <type>Checkbox</type>
</CustomField>