force-app/main/default/objects/Interior_Designer__c/fields/New_joinee__c.field-meta.xml
<CustomField>
    <fullName>New_joinee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New joinee</label>
    <type>Checkbox</type>
</CustomField>