force-app/main/default/objects/Interior_Designer__c/fields/New_joineeV2__c.field-meta.xml
<CustomField>
    <fullName>New_joineeV2__c</fullName>
    <formula>IF( Total_Opportunities__c &lt;= 5, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New joinee</label>
    <type>Checkbox</type>
</CustomField>