force-app/main/default/objects/Interior_Designer__c/fields/OverLoaded__c.field-meta.xml
<CustomField>
    <fullName>OverLoaded__c</fullName>
    <description>This Field is used in Design Partner selection class.</description>
    <formula>IF(OR(ISPICKVAL(DP_Status__c, &apos;Active - Overloaded 10-40&apos;),ISPICKVAL(DP_Status__c, &apos;Active - Overloaded 0-10&apos;),ISPICKVAL(DP_Status__c, &apos;Active - Overloaded available to meetings&apos;)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OverLoaded</label>
    <type>Checkbox</type>
</CustomField>