force-app/main/default/objects/Interior_Designer__c/fields/Preferred_Showroom__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Showroom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Showroom</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master__c.Type__c</field>
            <operation>equals</operation>
            <value>Showroom</value>
        </filterItems>
        <filterItems>
            <field>Master__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Interior Designers</relationshipLabel>
    <relationshipName>Interior_Designers</relationshipName>
    <type>Lookup</type>
</CustomField>