force-app/main/default/objects/Interior_Designer__c/fields/Property_Exp__c.field-meta.xml
<CustomField>
    <fullName>Property_Exp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is used in Designer Selection Class.</description>
    <label>Property Exp</label>
    <type>Checkbox</type>
</CustomField>