force-app/main/default/objects/Interior_Designer__c/fields/Property_Exp_Data__c.field-meta.xml
<CustomField>
    <fullName>Property_Exp_Data__c</fullName>
    <label>Property Exp Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>