force-app/main/default/objects/Interior_Designer__c/fields/Ran_PB__c.field-meta.xml
<CustomField>
    <fullName>Ran_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ran PB?</label>
    <type>Checkbox</type>
</CustomField>