force-app/main/default/objects/Interior_Designer__c/fields/Run_DP_Status_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Run_DP_Status_Process_Builder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run DP Status Process Builder</label>
    <type>Checkbox</type>
</CustomField>