force-app/main/default/objects/Interior_Designer__c/fields/SCVM_User__c.field-meta.xml
<CustomField>
    <fullName>SCVM_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCVM User?</label>
    <type>Checkbox</type>
</CustomField>