force-app/main/default/objects/Interior_Designer__c/fields/Security_deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_deposit__c</fullName>
    <label>Security deposit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Not Collected</fullName>
            </value>
            <value>
                <fullName>Adjusted in payout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>