force-app/main/default/objects/Interior_Designer__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title - Do Not Use</label>
    <length>80</length>
    <type>Text</type>
</CustomField>