force-app/main/default/objects/Interior_Designer__c/fields/TitleV2__c.field-meta.xml
<CustomField>
    <fullName>TitleV2__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Design Partner</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>ADRM</fullName>
            </value>
            <value>
                <fullName>Associate Designer</fullName>
            </value>
            <value>
                <fullName>Internal Buddy</fullName>
            </value>
            <value>
                <fullName>Community Manager</fullName>
            </value>
            <value>
                <fullName>Design Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Design Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Community Manager Digital Products</fullName>
            </value>
            <value>
                <fullName>Showroom Manager</fullName>
            </value>
            <value>
                <fullName>Sr. Project Manager</fullName>
            </value>
            <value>
                <fullName>Squarelet Partner</fullName>
            </value>
            <value>
                <fullName>PDDE</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Training DP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>