force-app/main/default/objects/Interior_Designer__c/fields/Total_Wins__c.field-meta.xml
<CustomField>
    <fullName>Total_Wins__c</fullName>
    <label>Total Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>