force-app/main/default/objects/Interior_Designer__c/fields/Workload_10_40__c.field-meta.xml
<CustomField>
    <fullName>Workload_10_40__c</fullName>
    <label>10-40 Workload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>