force-app/main/default/objects/Interior_Designer__c/fields/X0_10_Workload__c.field-meta.xml
<CustomField>
    <fullName>X0_10_Workload__c</fullName>
    <label>0-10 Workload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>