force-app/main/default/objects/Interior_Designer__c/fields/X0_4_Conversion__c.field-meta.xml
<CustomField>
    <fullName>X0_4_Conversion__c</fullName>
    <formula>IF(X0_4_Opportunities__c &gt; 0, X0_4_Won_Opportunities__c / X0_4_Opportunities__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>0 - 4 Conversion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>