force-app/main/default/objects/Interior_Designer__c/fields/X0_4_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>X0_4_Opportunities__c</fullName>
    <label>0 - 4 Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>