force-app/main/default/objects/Interior_Designer__c/fields/X10_40_Workload_Amount__c.field-meta.xml
<CustomField>
    <fullName>X10_40_Workload_Amount__c</fullName>
    <label>10-40 Workload Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>