force-app/main/default/objects/Interior_Designer__c/fields/X4_8_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>X4_8_Won_Opportunities__c</fullName>
    <label>4 - 8 Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>