force-app/main/default/objects/Interior_Designer__c/fields/X50_100_2_and_10_40_workload_2__c.field-meta.xml
<CustomField>
    <fullName>X50_100_2_and_10_40_workload_2__c</fullName>
    <formula>IF(AND(X50_100_Projects__c &lt;=2,  Workload_10_40__c &gt;=2), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>50-100 &lt;= 2 and 10-40 workload &gt;=2</label>
    <type>Checkbox</type>
</CustomField>