force-app/main/default/objects/Interior_Designer__c/fields/X50_100_Projects__c.field-meta.xml
<CustomField>
    <fullName>X50_100_Projects__c</fullName>
    <label>50-100 Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>