force-app/main/default/objects/Interior_Designer__c/fields/X8_Conversion__c.field-meta.xml
<CustomField>
    <fullName>X8_Conversion__c</fullName>
    <formula>IF(X8_Opportunities__c &gt; 0, X8_Won_Opportunities__c / X8_Opportunities__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>8+ Conversion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>