force-app/main/default/objects/Interior_Designer__c/fields/X8_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>X8_Opportunities__c</fullName>
    <label>8+ Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>